Fixes .simple-filter layout issues.

--- a/themes/wwwevergreen/css/src/custom-css/catalog.scss
+++ b/themes/wwwevergreen/css/src/custom-css/catalog.scss
@@ -645,10 +645,7 @@
  * around with the filter form doohickies.
  */
 .simple-filter{
-	
-	@include breakpoint($starlord){
-		display: flex;
-	}
+	display: flex;
 }
 
 .simple-filter-label{
@@ -659,6 +656,9 @@
 }
 
 .simple-filter-list{
+	// box model
+	margin-bottom: 0;
+	// layout
 	display: flex;
 	flex-wrap: wrap;
 }
